# pyspark-neo4j-graph

./: Dockerfile  REAME.md  pyproject.toml  requirements.txt
app/: __init__.py  __main__.py  data_analysis_system.py  main.py  neo4j_driver.py  test_data_analysis.py
datasets/: Demo Data- Task Management System - Projects.csv  Demo Data-Business Ops_Invoice Tracking System  - Invoices.csv  Demo Data-CRM System - BD Expenses.csv  Demo Data-Employee Time Tracking System - Ops Employee.csv
output/hours_per_project_per_employee/: .part-00000-8bc42f82-ac4c-419d-99c2-fef379c3d9af-c000.csv.crc  part-00000-8bc42f82-ac4c-419d-99c2-fef379c3d9af-c000.csv
output/hours_per_project_per_employee_no_location/: .part-00000-db27dee5-f588-46fb-9505-ce90dc181721-c000.csv.crc  part-00000-db27dee5-f588-46fb-9505-ce90dc181721-c000.csv
test_datasets/: Test Data - Business Ops_Invoice Tracking System - Invoices.csv  Test Data - Task Management System - Projects.csv  Test Data-Employee Time Tracking System - Ops Employee.csv
